Carousel and delete field

--- a/views/fields/create.ejs
+++ b/views/fields/create.ejs
@@ -23,13 +23,13 @@
                   
             <div class="input-fields">
               <label>Nombre del complejo:</label>
-              <input type="text" name="complexName" class="input" placeholder="Nombre del complejo*" required>
+              <input type="text" name="complexName" class="input" placeholder="Nombre del complejo*">
               
               <label>Dirección:</label>
-              <input type="text" name="address" class="input" placeholder="Calle, altura, barrio, CP*" minlength="6" required>
+              <input type="text" name="address" class="input" placeholder="Calle, altura, barrio, CP*" minlength="6">
 
               <label>Tipo de cancha: </label>
-              <select class="selector" name="fieldType" required>
+              <select class="selector" name="fieldType">
                 <option disabled selected>Seleccione tipo de cancha</option>
                 <option value="F5">Futbol 5</option>
                 <option value="F7">Futbol 7</option>
@@ -40,20 +40,20 @@
             
             <div class="input-fields-sd">
               <label>Nombre de la cancha:</label>
-              <input type="text" class="input" name="name" placeholder="Nombre de la cancha*" required>
+              <input type="text" class="input" name="name" placeholder="Nombre de la cancha*">
                
               <label>Teléfono:</label>
-              <input type="tel" name="phone" class="input" minlength="8" placeholder="12345678*" required>
+              <input type="tel" name="phone" class="input" minlength="8" placeholder="12345678*">
 
               <label>Precio del alquiler por hora: </label>
-              <input class="input" type="number" name="price" placeholder="0" required>
+              <input class="input" type="number" name="price" placeholder="0">
             </div>
               
           </div>
 
           <div class="description">
               <label>Servicios: </label>
-              <input class="input" name="description" placeholder="Descripción de servicios*" required>
+              <input class="input" name="description" placeholder="Descripción de servicios*">
           </div>
           
           <div class="uploads">
