--- a/views/fields/show.ejs
+++ b/views/fields/show.ejs
@@ -3,10 +3,10 @@
 <head>
 	<%- include("../partials/head.ejs")%> 
 	
-	<!-- Minified JS library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!-- Compiled and minified Bootstrap JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="/css/showField.css">
 	
@@ -25,38 +25,35 @@
 			<div class="body">
 
 				<!-- Carousel de imágenes -->
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>
-				
+				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="500">
+					
+					<ul class="carousel-indicators">
+						<li data-target="#demo" data-slide-to="0" class="active"></li>
+						<li data-target="#demo" data-slide-to="1"></li>
+						<li data-target="#demo" data-slide-to="2"></li>
+					  </ul>
 					<div class="carousel-inner">
-						<div class="item active">
-							<img src="<%= cancha.image1 %>" class="fotoCancha" alt="">
-						</div>
-						<div class="item">
-							<img src="<%= cancha.image2 %>" class="fotoCancha" alt="">
-						</div>
-						<div class="item">
-							<img src="<%= cancha.image3 %>" class="fotoCancha" alt="">
-						</div>
+					  <div class="carousel-item active">
+						  <img src="<%= cancha.image1 %>" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="<%= cancha.image2 %>" class="d-block w-100" alt="...">
+					  </div>
+					  <div class="carousel-item">
+						<img src="<%= cancha.image3 %>" class="d-block w-100" alt="...">
+					  </div>
 					</div>
-				
-					<!-- Controls -->
-					<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
 
-					<!-- Descripción producto -->	
+					<a class="carousel-control-prev"data-slide="prev">
+						<span class="carousel-control-prev-icon"></span>
+					  </a>
+					  <a class="carousel-control-next" data-slide="next">
+						<span class="carousel-control-next-icon"></span>
+					</a>
+				  </div>
+
+				  <!-- Descripción producto -->	
 				<div class="descripcion">
 					<h2 class="titulo">Dirección</h2>
 					<p><%= cancha.Address %></p>
@@ -65,11 +62,19 @@
 					<p><%= cancha.phone %></p>
 					<h2>Servicios</h2>
 					<p><%= cancha.description %></p>
+					
+					<form action="/fields/:id" method="POST" enctype="multipart/form-data">
+						<div><button type="submit" class="btn btn-primary">EDITAR</button></div> 
+					</form>
+
+					<form action="/fields/:id" method="DELETE" enctype="multipart/form-data">
+						<div><button type="submit" class="btn btn-primary">ELIMINAR</button></div> 
+					</form>
 				</div> 	
 
 					<!-- Sección confirmar reserva -->	
 				<section class="reserva">
-					<form action="action_page.php" method="post">
+					<form action="/fields/create" method="POST" enctype="multipart/form-data"></form>
 						<div class="contenedor">
 							<h1>RESERVA</h1>
 							
